# sztuczna-inteligencja

./: .gitignore  pyproject.toml
